# QQ-Chatbot

./: .gitignore  CHECKLIST.md  IMPLEMENTATION_REPORT.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  WEB_GUIDE.md  init_db.sql  install.bat  pyproject.toml  quick_login.bat  requirements.txt  run.bat  start_all.bat  start_all_with_web.bat  start_bot.bat  start_napcat.bat  start_web.bat  stop_all.bat  test.bat  test_all.py  test_chat.py  使用指南.md  启动.bat
config/: .env.example  config.yaml.example
docs/: API.md  API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT.md  PRIVACY_PROTECTION.md  PRIVATE_CHAT.md  PROJECT_OVERVIEW.md  SECURITY.md  TECH_STACK.md  USAGE.md  VECTOR_MEMORY.md  WEB_SEARCH.md  winQQ聊天机器人.md
docs/plans/: 2026-02-06-qq-chatbot-design.md  2026-02-12-dialogue-intelligence-design.md
scripts/: README.md  check_config.bat  clean_data.bat  clear_memory.bat  clear_memory.py  diagnose_bot.bat  run_tests.bat  test_features.bat  test_security.bat  test_security.py  toggle_features.bat  watch_log.bat
src/: __init__.py  bot.py
src/ai/: client.py  nickname_analyzer.py  prompts.py
src/dialogue/: __init__.py  context_enhancer.py  dialogue_state.py  intent_analyzer.py  proactive_engine.py  state_machine.py
src/memory/: __init__.py  context.py  database.py  member_db.py  memory_manager.py  vector_store.py
src/plugins/: __init__.py  bilibili.py  chat_handler.py  member_manager.py  proactive_chat.py
src/triggers/: __init__.py  keyword.py  name.py  (+2 more)
tests/: test_config_validator.py  test_content_filter.py  test_intent_analyzer.py
web/: README.md  app.py
(+9 files in other folders)
