[project]
name = "qq-chatbot"
version = "1.0.0"
description = "基于NoneBot2的智能QQ聊天机器人"
readme = "README.md"
requires-python = ">=3.9"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = []
plugin_dirs = ["src/plugins", "src/triggers"]
builtin_plugins = ["echo"]
